Clase de escuchando eventos con JavaScript

--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
     <title>Manipulacion del DOM basica</title>
 </head>
 <body>
-    <h1>Manipulacion del DOM basica</h1>
-    <input id="calculo1" placeholder="Escribe algo aqui">
-    <input id="calculo2" placeholder="Escribe algo aqui">
-    <!-- aqui definimos el evento -->
-    <button id="btnCalcular" onclick="btnDaClick()">Calcular</button>
-    <p id="resultado"></p>
+    <form id="form">
+        <h1>Manipulacion del DOM basica</h1>
+        <input id="calculo1" placeholder="Escribe algo aqui">
+        <input id="calculo2" placeholder="Escribe algo aqui">
+        <!-- aqui definimos el evento -->
+        <button type="button" id="btnCalcular">Calcular</button>
+        <p id="resultado"></p>
+    </form>
     <script src="./script.js"></script>
 </body>
 </html>
